# mirrors

./: .Makefile.swp  .deps  .gitignore  Android.bp  Android.go  Android.mk  CHANGELOG.md  CMakeLists.txt  DrmHandle.cpp  DrmHandle.h  DrmRgaApi.cpp  DrmRgaApi.h  DrmRgaContext.h  GrallocOps.cpp  GrallocOps.h  GraphicBuffer.cpp  GraphicBuffer.h  MAINTAINERS  Makefile  Makefile.am  Makefilebak  Makefilebak2  README.md  README.txt  RgaApi.cpp  RgaApi.h  RgaMutex.h  RgaSingleton.h  RkAiqCamGroupManager.cpp  RkAiqCamGroupManager.h  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h  RockchipFileOps.cpp  RockchipFileOps.h  RockchipRga.cpp  RockchipRga.h  S11_npu_init  S36load_all_wifi_modules  S36load_rv1109_wifi_modules  (+43 more)
IspFec/: Android.bp  CMakeLists.txt  RkIspFecVersion.h
IspFec/cmake/: CompileOptions.cmake
IspFec/include/: rk_ispfec_api.h
IspFec/include_prv/: RkIspFecGenMesh.h  RkIspFecHw.h  RkIspFecHwMgr.h  fec-config.h  genMesh.h  rkispp-config.h
IspFec/src/: RkIspFecGenMesh.cpp  RkIspFecHw.cpp  RkIspFecHwMgr.cpp  rk_ispfec.cpp
algos/: Android.bp  CMakeLists.txt  interpolation.cpp  rk_aiq_algo_types.h  rk_aiq_algo_types_int.h
algos/a3dlut/: CMakeLists.txt  rk_aiq_a3dlut_algo.cpp  rk_aiq_algo_a3dlut_itf.cpp  rk_aiq_types_a3dlut_algo_prvt.h  rk_aiq_uapi_a3dlut_int.cpp
algos/abayer2dnr2/: rk_aiq_abayer2dnr_algo_bayernr_v2.cpp  rk_aiq_abayer2dnr_algo_bayernr_v2.h  rk_aiq_abayer2dnr_algo_itf_v2.cpp  rk_aiq_abayer2dnr_algo_v2.cpp  rk_aiq_types_abayer2dnr_algo_prvt_v2.h  rk_aiq_uapi_abayer2dnr_int_v2.cpp
algos/abayertnr2/: CMakeLists.txt  rk_aiq_abayertnr_algo_bayertnr_v2.cpp  rk_aiq_abayertnr_algo_bayertnr_v2.h  rk_aiq_abayertnr_algo_itf_v2.cpp  rk_aiq_abayertnr_algo_v2.cpp  rk_aiq_types_abayertnr_algo_prvt_v2.h  rk_aiq_uapi_abayertnr_int_v2.cpp
algos/ablc/: CMakeLists.txt  rk_aiq_ablc_algo.cpp  rk_aiq_ablc_algo.h  rk_aiq_algo_ablc_itf.cpp  rk_aiq_types_ablc_algo_prvt.h  rk_aiq_uapi_ablc_int.cpp
algos/acac/: cac_adaptor.cpp  cac_adaptor.h  rk_aiq_algo_acac_itf.cpp  rk_aiq_algo_acac_itf.h  rk_aiq_types_acac_algo_prvt.h  rk_aiq_uapi_acac_int.cpp
algos/accm/: CMakeLists.txt  rk_aiq_accm_algo.cpp  rk_aiq_accm_algo.h  rk_aiq_algo_accm_itf.cpp  rk_aiq_algo_accm_itf.h  rk_aiq_types_accm_algo_prvt.h  rk_aiq_uapi_accm_int.cpp
algos/acgc/: CMakeLists.txt  rk_aiq_algo_acgc_itf.cpp
algos/acnr/: CMakeLists.txt  rk_aiq_acnr_algo_cnr_v1.cpp  rk_aiq_acnr_algo_cnr_v1.h  rk_aiq_acnr_algo_itf_v1.cpp  rk_aiq_acnr_algo_itf_v1.h  rk_aiq_acnr_algo_v1.cpp  rk_aiq_uapi_acnr_int_v1.cpp
algos/acnr2/: CMakeLists.txt  rk_aiq_acnr_algo_cnr_v2.cpp  rk_aiq_acnr_algo_cnr_v2.h  rk_aiq_acnr_algo_itf_v2.cpp  rk_aiq_acnr_algo_v2.cpp  rk_aiq_uapi_acnr_int_v2.cpp
algos/acp/: rk_aiq_algo_acp_itf.cpp
algos/acsm/: CMakeLists.txt  rk_aiq_algo_acsm_itf.cpp  rk_aiq_algo_acsm_itf.h  rk_aiq_types_algo_acsm_prvt.h  rk_aiq_uapi_acsm.cpp
algos/adebayer/: CMakeLists.txt  rk_aiq_algo_adebayer.cpp  rk_aiq_algo_adebayer_itf.cpp  rk_aiq_types_algo_adebayer_prvt.h  rk_aiq_uapi_adebayer_int.cpp
algos/adegamma/: CMakeLists.txt  rk_aiq_adegamma_algo.h  rk_aiq_algo_adegamma_itf.cpp  rk_aiq_uapi_adegamma_int.cpp
algos/adehaze/: CMakeLists.txt  rk_aiq_adehaze_algo.cpp  rk_aiq_adehaze_algo.h  rk_aiq_algo_adhaz_itf.cpp  rk_aiq_algo_adhaz_itf.h  rk_aiq_types_adehaze_algo_prvt.h  rk_aiq_uapi_adehaze_int.cpp
algos/adpcc/: rk_aiq_adpcc_algo.cpp  rk_aiq_adpcc_algo.h  rk_aiq_algo_adpcc_itf.cpp  rk_aiq_uapi_adpcc_int.cpp
algos/adrc/: CMakeLists.txt  rk_aiq_adrc_algo.cpp  rk_aiq_adrc_algo.h  rk_aiq_algo_adrc_itf.cpp  rk_aiq_types_adrc_algo_prvt.h  rk_aiq_uapi_adrc_int.cpp
algos/ae/: Android.bp  CMakeLists.txt
algos/aeis/: CMakeLists.txt  eis_algo_service.cpp  eis_algo_service.h  eis_loader.cpp  eis_loader.h  imu_service.cpp  imu_service.h  remap_backend.cpp  remap_backend.h  rk_aiq_algo_aeis_itf.cpp  scaler_service.h
algos/af/: Android.bp  CMakeLists.txt
algos/afec/: rk_aiq_algo_afec_itf.cpp
algos/again/: rk_aiq_again_algo.cpp  rk_aiq_again_algo.h  rk_aiq_again_algo_gain.cpp  rk_aiq_again_algo_gain.h  rk_aiq_again_algo_itf.cpp  rk_aiq_again_algo_itf.h  rk_aiq_types_again_algo_prvt.h  rk_aiq_uapi_again_int.cpp
algos/again2/: CMakeLists.txt  rk_aiq_again_algo_gain_v2.cpp  rk_aiq_again_algo_gain_v2.h  rk_aiq_again_algo_itf_v2.cpp  rk_aiq_again_algo_itf_v2.h  rk_aiq_again_algo_v2.cpp  rk_aiq_again_algo_v2.h  rk_aiq_types_again_algo_prvt_v2.h  rk_aiq_uapi_again_int_v2.cpp
algos/agamma/: CMakeLists.txt  rk_aiq_agamma_algo.cpp  rk_aiq_agamma_algo.h  rk_aiq_algo_agamma_itf.cpp  rk_aiq_types_agamma_algo_prvt.h  rk_aiq_uapi_agamma_int.cpp
algos/agic/: CMakeLists.txt  rk_aiq_algo_agic.cpp  rk_aiq_algo_agic_itf.cpp  rk_aiq_types_algo_agic_prvt.h  rk_aiq_uapi_agic_int.cpp
algos/aie/: CMakeLists.txt  rk_aiq_algo_aie_itf.cpp  rk_aiq_types_algo_aie_prvt.h
algos/aldch/: CMakeLists.txt  rk_aiq_algo_aldch_itf.cpp  rk_aiq_uapi_aldch_int.cpp
algos/alsc/: CMakeLists.txt  rk_aiq_algo_alsc_itf.cpp  rk_aiq_alsc_algo.cpp  rk_aiq_alsc_algo.h  rk_aiq_alsc_algo_v1.cpp  rk_aiq_types_alsc_algo_prvt.h
algos/amd/: CMakeLists.txt  rk_aiq_algo_amd_itf.cpp  rk_aiq_types_algo_amd_prvt.h
algos/amerge/: CMakeLists.txt  rk_aiq_algo_amerge_itf.cpp  rk_aiq_algo_amerge_itf.h  rk_aiq_amerge_algo.cpp  rk_aiq_amerge_algo.h  rk_aiq_types_amerge_algo_prvt.h  (+1 more)
algos_camgroup/: Android.bp  CMakeLists.txt  rk_aiq_algo_camgroup_types.h
gst/: Makefile.am  meson.build
media_enquiry/: CMakeLists.txt
mpp/: CMakeLists.txt  mpp.cpp
rk_stream/: CMakeLists.txt
rkaiq/: Android.bp  CMakeLists.txt  RkAiqCamGroupManager.cpp  RkAiqCamGroupManager.h  RkAiqCamProfiles.cpp  RkAiqCamProfiles.h  RkAiqGlobalParamsManager.cpp  RkAiqGlobalParamsManager.h  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h  rkaiq.go  rkaiq_getAlgosLib.go  rkaiq_getAlgosMacros.go  rkaiq_getSrcsFiles.go  rkaiq_getStaticLibSrcs.go  rkaiq_switchs.go
rkaiq_3A_server/: CMakeLists.txt  S40rkaiq_3A  rkaiq_3A_server.cpp
rkaiq_tool_server/: .gitignore  Android.bp  CMakeLists.txt  build.sh  rkaiq_tool_server.cpp  rkaiq_tool_server.go
smart_ir/: Android.mk  CMakeLists.txt
(+5151 files in other folders)
