cmake_minimum_required(VERSION 2.8...3.22)

project(camera_engine)

set(RK_AIQ_IS_SUBDIR TRUE)

if(EXISTS ${PROJECT_SOURCE_DIR}/rk_aiq)
    add_subdirectory(rk_aiq)
    set(AIQ_DIR ${PROJECT_SOURCE_DIR}/rk_aiq)
    message(WARNING "use rk_aiq dir:${PROJECT_SOURCE_DIR}/rk_aiq")
else()
    add_subdirectory(rkaiq)
    set(AIQ_DIR ${PROJECT_SOURCE_DIR}/rkaiq)
    message(WARNING "use rkaiq dir:${PROJECT_SOURCE_DIR}/rkaiq")
endif()
add_subdirectory(rkisp_demo)
add_subdirectory(IspFec)
add_subdirectory(smart_ir)
add_subdirectory(media_enquiry)
add_subdirectory(rk_stream)
add_subdirectory(rkaiq_tool_server)
#add_subdirectory(rkisp_parser_demo)
if(EXISTS ${PROJECT_SOURCE_DIR}/rkaiq_3A_server)
    add_subdirectory(rkaiq_3A_server)
endif()
