project(
    'rkwifibt',
    'c',
    version : '1.0.0',
    meson_version : '>=0.45.0',
)

executable(
    'brcm_patchram_plus1',
    [ 'tools/brcm_tools/brcm_patchram_plus1.c' ],
    install : true,
)

executable(
    'dhd_priv',
    [ 'tools/brcm_tools/dhd_priv.c' ],
    install : true,
)

executable(
    'rk_wifibt_init',
    [ 'src/rk_wifibt_init.c' ],
    install : true,
)
